fixed interface bug when collapsing floors

--- a/src/less/custom/_monitor_overview.less
+++ b/src/less/custom/_monitor_overview.less
@@ -115,6 +115,7 @@ label > p {
 
 .monitorContainer {
   max-height: 72.5vh;
+  width: 100%;
   overflow-y: scroll;
   float:left;
   border: 1px solid #ddd;
